# AndroCaffe

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gputech/androcaffe/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: androcaffe.cpp  androcaffe.h  classify.cpp  classify.h
app/src/main/cpp/include/: openblas_config.h
app/src/main/cpp/include/caffe/proto/: caffe.pb.h
app/src/main/cpp/include/glog/: config.h
app/src/main/java/com/gputech/androcaffe/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gputech/androcaffe/: ExampleUnitTest.java
